<resources>
    <string name="app_name">Talk Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="need_new_account">Need New Account ?</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="or_login_using_your">or Login using your</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="log_out">Logout</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="hey_i_am_online_now">hey, i am available now.</string>
    <string name="update">Update</string>
    <string name="create_group">Create Group</string>
    <string name="write_your_message_here">write your message here..</string>
</resources>
