<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/default_image"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/colorAccent"/>

    <EditText
        android:id="@+id/set_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:inputType="textMultiLine"
        android:hint="@string/username"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:padding="10dp" />

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_user_name"
        android:inputType="textMultiLine"
        android:hint="@string/hey_i_am_online_now"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:padding="10dp" />

    <Button
        android:id="@+id/update_settings"
        android:layout_below="@id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"/>
</RelativeLayout>